--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -41,6 +41,14 @@
                     android:visibility="gone" />
 
                 <Button
+                    android:id="@+id/btn_favorite"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_margin="8dp"
+                    android:background="@mipmap/ic_favorite_border_white_24dp"
+                    android:backgroundTint="@color/white" />
+
+                <Button
                     android:id="@+id/btn_share"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
