--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -7,13 +7,13 @@
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/abl_large"
+        android:id="@+id/abl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/ctl_large"
+            android:id="@+id/ctl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:contentScrim="?attr/colorPrimary"
@@ -30,7 +30,7 @@
                 app:layout_collapseParallaxMultiplier="1">
 
                 <ImageView
-                    android:id="@+id/iv_img"
+                    android:id="@+id/iv_cover"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_gravity="bottom"
