--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -7,13 +7,13 @@
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/abl_large"
+        android:id="@+id/abl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/ctl_large"
+            android:id="@+id/ctl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:contentScrim="?attr/colorPrimary"
@@ -27,7 +27,7 @@
                 app:layout_collapseParallaxMultiplier="1">
 
                 <ImageView
-                    android:id="@+id/iv_img"
+                    android:id="@+id/iv_cover"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_gravity="center"
@@ -87,7 +87,7 @@
         app:fab_addButtonColorNormal="?attr/colorPrimary"
         app:fab_addButtonColorPressed="?attr/colorPrimaryDark"
         app:fab_addButtonPlusIconColor="@color/white"
-        app:layout_anchor="@id/abl_large"
+        app:layout_anchor="@id/abl"
         app:layout_anchorGravity="bottom|end"
         app:fab_expandDirection="left">
 
