--- a/app/src/main/res/layout/activity_large.xml
+++ b/app/src/main/res/layout/activity_large.xml
@@ -7,13 +7,13 @@
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/abl_large"
+        android:id="@+id/abl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/ctl_large"
+            android:id="@+id/ctl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:contentScrim="?attr/colorPrimary"
@@ -27,7 +27,7 @@
                 app:layout_collapseParallaxMultiplier="1">
 
                 <ImageView
-                    android:id="@+id/iv_img"
+                    android:id="@+id/iv_cover"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_gravity="center"
@@ -59,36 +59,46 @@
                 android:id="@+id/htv_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
                 android:paddingBottom="8dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:paddingTop="8dp" />
+                android:paddingTop="8dp"
+                android:textSize="16sp" />
+
+            <WebView
+                android:id="@+id/wv_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp"
+                android:visibility="gone" />
 
             <android.support.v7.widget.RecyclerView
-                android:clickable="true"
                 android:id="@+id/rv_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:clickable="true"
                 android:overScrollMode="never"
-                android:visibility="gone"
                 android:paddingBottom="4dp"
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
-                android:scrollbars="none" />
+                android:scrollbars="none"
+                android:visibility="gone" />
 
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_collect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@android:color/holo_red_light"
-        app:rippleColor="@android:color/holo_red_dark"
-        app:layout_anchor="@id/abl_large"
-        app:layout_anchorGravity="bottom|end" />
+        app:layout_anchor="@id/abl"
+        app:layout_anchorGravity="bottom|end"
+        app:rippleColor="@android:color/holo_red_dark" />
 
 </android.support.design.widget.CoordinatorLayout>
