--- a/app/src/main/res/layout/activity_medimu.xml
+++ b/app/src/main/res/layout/activity_medimu.xml
@@ -32,7 +32,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/iv_img"
+                        android:id="@+id/iv_cover"
                         android:layout_width="120dp"
                         android:layout_height="160dp"
                         android:layout_gravity="top"
