--- a/app/src/main/res/layout/activity_morse.xml
+++ b/app/src/main/res/layout/activity_morse.xml
@@ -82,7 +82,7 @@
                 </LinearLayout>
 
                 <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/fab"
+                    android:id="@+id/fab_collect"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
