--- a/app/src/main/res/layout/content_calendar.xml
+++ b/app/src/main/res/layout/content_calendar.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_collect"
         app:backgroundTint="?attr/colorPrimary"
         android:layout_margin="@dimen/fab_margin"
         android:src="@mipmap/ic_add_white_24dp"
