--- a/app/src/main/res/layout/fragment_collect.xml
+++ b/app/src/main/res/layout/fragment_collect.xml
@@ -26,7 +26,7 @@
                 app:layout_collapseParallaxMultiplier="1">
 
                 <ImageView
-                    android:id="@+id/iv_img"
+                    android:id="@+id/iv_cover"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_gravity="center"
