--- a/app/src/main/res/layout/item_app_shot.xml
+++ b/app/src/main/res/layout/item_app_shot.xml
@@ -17,7 +17,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/iv_img"
+            android:id="@+id/iv_cover"
             android:layout_width="135dp"
             android:layout_height="240dp"
             android:scaleType="centerCrop" />
