--- a/app/src/main/res/layout/item_code.xml
+++ b/app/src/main/res/layout/item_code.xml
@@ -26,7 +26,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/iv_img"
+                android:id="@+id/iv_cover"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
