--- a/app/src/main/res/layout/item_disease.xml
+++ b/app/src/main/res/layout/item_disease.xml
@@ -25,7 +25,7 @@
             android:orientation="horizontal">
 
             <com.android.volley.toolbox.NetworkImageView
-                android:id="@+id/iv_img"
+                android:id="@+id/iv_cover"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center"
