--- a/app/src/main/res/layout/item_great.xml
+++ b/app/src/main/res/layout/item_great.xml
@@ -26,7 +26,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/iv_img"
+                android:id="@+id/iv_cover"
                 android:layout_width="match_parent"
                 android:layout_height="360dp"
                 android:layout_gravity="center"
