--- a/app/src/main/res/layout/item_novel_txt.xml
+++ b/app/src/main/res/layout/item_novel_txt.xml
@@ -25,7 +25,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/iv_img"
+                android:id="@+id/iv_cover"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center"
