--- a/app/src/main/res/layout/activity_pager.xml
+++ b/app/src/main/res/layout/activity_pager.xml
@@ -6,7 +6,7 @@
     tools:context=".info.mvp.page.activity.PagerActivity">
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
+        android:id="@+id/vp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white" />
