--- a/app/src/main/res/layout/activity_search_no_swipe.xml
+++ b/app/src/main/res/layout/activity_search_no_swipe.xml
@@ -13,7 +13,7 @@
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_result"
+        android:id="@+id/rv_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:overScrollMode="never"
