--- a/app/src/main/res/layout/fragment_page_no_bar.xml
+++ b/app/src/main/res/layout/fragment_page_no_bar.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/iv_cover"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
