--- a/app/src/main/res/layout/item_collect.xml
+++ b/app/src/main/res/layout/item_collect.xml
@@ -30,7 +30,7 @@
                 android:textColor="?attr/colorPrimary" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/iv_cover"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
