--- a/app/src/main/res/layout/item_model.xml
+++ b/app/src/main/res/layout/item_model.xml
@@ -34,7 +34,7 @@
                 android:textSize="18sp" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/iv_cover"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
