--- a/app/src/main/res/layout/item_app_shot.xml
+++ b/app/src/main/res/layout/item_app_shot.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cv_shot"
+        android:id="@+id/cv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
