--- a/app/src/main/res/layout/item_horiz.xml
+++ b/app/src/main/res/layout/item_horiz.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cv_horiz"
+        android:id="@+id/cv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:foreground="?attr/selectableItemBackground">
