--- a/app/src/main/res/layout/item_model_two.xml
+++ b/app/src/main/res/layout/item_model_two.xml
@@ -26,12 +26,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:layout_marginBottom="-12dp"
                 android:background="@drawable/card_left_tag"
-                android:paddingLeft="24dp"
-                android:paddingRight="24dp"
-                android:textColor="?attr/colorPrimary"
-                android:textSize="18sp" />
+                android:textColor="?attr/colorPrimary" />
 
             <ImageView
                 android:id="@+id/iv_cover"
@@ -46,12 +42,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:layout_marginTop="-12dp"
                 android:background="@drawable/card_left_tag"
-                android:paddingLeft="24dp"
-                android:paddingRight="24dp"
-                android:textColor="?attr/colorPrimary"
-                android:textSize="18sp" />
+                android:textColor="?attr/colorPrimary" />
 
         </LinearLayout>
 
