--- a/app/src/main/res/layout/item_model_one.xml
+++ b/app/src/main/res/layout/item_model_one.xml
@@ -13,6 +13,7 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
+        app:cardBackgroundColor="?attr/colorPrimary"
         app:cardCornerRadius="20dp">
 
         <LinearLayout
