--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -73,6 +73,32 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/ll_bright"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:layout_marginTop="16dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/iv_bright"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_marginLeft="16dp"
+                            android:src="@mipmap/ic_brightness_medium_black_24dp"
+                            android:tint="#FF999999" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:text="屏幕亮度"
+                            android:textSize="16sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:id="@+id/ll_theme"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -86,7 +112,7 @@
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:layout_marginLeft="16dp"
-                            android:src="@mipmap/ic_style_black_18dp"
+                            android:src="@mipmap/ic_bookmark_black_24dp"
                             android:tint="#FF999999" />
 
                         <TextView
@@ -112,14 +138,14 @@
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:layout_marginLeft="16dp"
-                            android:src="@mipmap/ic_bookmark_black_24dp"
+                            android:src="@mipmap/ic_style_black_18dp"
                             android:tint="#FF999999" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="16dp"
-                            android:text="随机卡片"
+                            android:text="卡片随机"
                             android:textSize="16sp" />
 
                         <View
@@ -136,7 +162,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/ll_bright"
+                        android:id="@+id/ll_col"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
@@ -145,18 +171,18 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:id="@+id/iv_bright"
+                            android:id="@+id/iv_col"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:layout_marginLeft="16dp"
-                            android:src="@mipmap/ic_brightness_medium_black_24dp"
+                            android:src="@mipmap/ic_view_array_black_24dp"
                             android:tint="#FF999999" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="16dp"
-                            android:text="屏幕亮度"
+                            android:text="卡片列数"
                             android:textSize="16sp" />
 
                     </LinearLayout>
