--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cv_photo"
+        android:id="@+id/cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -31,7 +31,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:minHeight="120dp"
-                android:src="@mipmap/ic_pictures_no"
                 android:scaleType="centerCrop" />
 
             <TextView
