--- a/app/src/main/res/layout/item_model.xml
+++ b/app/src/main/res/layout/item_model.xml
@@ -13,6 +13,7 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
+        app:cardBackgroundColor="?attr/colorPrimary"
         app:cardCornerRadius="20dp">
 
         <LinearLayout
@@ -31,11 +32,18 @@
 
             <ImageView
                 android:id="@+id/iv_cover"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:tint="@android:color/white" />
+
+            <com.bigkoo.convenientbanner.ConvenientBanner
+                android:id="@+id/cb"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:canLoop="true" />
 
             <TextView
                 android:id="@+id/right_bottom_tag"
