--- a/app/src/main/res/layout/activity_large.xml
+++ b/app/src/main/res/layout/activity_large.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?android:colorBackground"
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
@@ -71,8 +72,7 @@
                 android:paddingBottom="8dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:paddingTop="8dp"
-                android:visibility="gone" />
+                android:paddingTop="8dp" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_list"
